# devops_cppcheck_demo

./: CMakeLists.txt  run.sh
.github/workflows/: c-cpp.yml
src/: main.cpp
